@@ -1113,7 +1113,7 @@ void game_controller::download_campaigns(std::string host)
 	try {
 		const network::manager net_manager;
 		const network::connection sock = dialogs::network_connect_dialog(disp(), _("Connecting to Server..."),
-										items.front(), lexical_cast_default<int>(items.back(),15003) );
+										items.front(), lexical_cast_default<int>(items.back(),15005) );
 		if(!sock) {
 			gui::show_error_message(disp(), _("Could not connect to host."));
 			preferences::set_campaign_server("");
